# sanguosha-RL

./: .gitignore  pyproject.toml  readme.md
agents/: __init__.py  llm_adapter.py  random_bot.py
api/: main.py
api/static/: index.html
cli/: main.py
coordinator/: __init__.py  room.py
data/: standard_deck_108.json
examples/: trl_dpo_minimal.py
recorder/: __init__.py  rlds.py
sgs_env/: __init__.py  actions.py  cards.py  constants.py  env.py  game_state.py  heroes.py  observation.py
sgs_pz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_active_skills.py  test_api_smoke.py  test_env_basic.py  test_env_combat.py  test_full_game_cases.py  test_heroes_equips.py  test_identity_rules.py  test_playwright_e2e.py  test_rules_combinations.py  test_ws_e2e.py  test_wuxie_stack.py
