[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgs-pz"
version = "0.1.0"
description = "Sanguosha (Identity) PettingZoo AEC environment + FastAPI gateway + RLDS recorder"
authors = [{name="AutoDev"}]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "pettingzoo>=1.24.3",
  "gymnasium>=0.29.1",
  "numpy>=1.26.0",
  "pydantic>=2.8.2",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "orjson>=3.10.7",
  "websockets>=12.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.7",
  "mypy>=1.10.0",
  "black>=24.4.2",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
ignore_missing_imports = true

[tool.setuptools]
packages = [
  "sgs_env",
  "recorder",
  "agents",
  "coordinator",
  "api",
]